--- a/.ghc.environment.x86_64-linux-8.6.5
+++ b/.ghc.environment.x86_64-linux-8.6.5
@@ -12,7 +12,8 @@ package-id base-4.12.0.0
 package-id ghc-prim-0.5.3
 package-id rts
 package-id integer-gmp-1.0.2.0
+package-id containers-0.6.0.1
+package-id array-0.5.3.0
+package-id deepseq-1.4.4.0
 package-id random-1.1-3ypV4EIycgb35PKjTYYr5q
 package-id time-1.8.0.2
-package-id deepseq-1.4.4.0
-package-id array-0.5.3.0
